test/org/midica/testfiles/failing/macro-in-block.midica
INCLUDE_FILE inc/instruments.midica

(

	MACRO mac1
		0 c /4
	END

)